// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> should display error message 1`] = `
.c7 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c0 .c3 {
  border-color: #FF6347;
}

.c0 .c3:focus-within {
  box-shadow: none;
}

.c0 .c5,
.c0 .c1 {
  color: #FF6347;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1.6rem 0 0;
  border: 0.2rem solid;
  border-radius: 0.2rem;
  border-color: #EAEAEA;
  background: #EAEAEA;
}

.c4:focus-within {
  box-shadow: 0 0 0 0.5rem #F231A5;
}

.c8 {
  width: 100%;
  color: #030517;
  font-family: Poppins,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  font-size: 1.6rem;
  padding: 0.8rem 0;
  padding-left: 1.6rem;
  background-color: transparent;
  border: 0;
  outline: none;
}

.c8:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 2.4rem #EAEAEA inset;
  -webkit-filter: none;
  filter: none;
}

.c2 {
  font-size: 1.4rem;
  color: #030517;
  cursor: pointer;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.2rem;
  color: #8F8F8F;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
}

.c6 > svg {
  width: 100%;
  -webkit-transition: 0.5s;
  transition: 0.5s;
}

.c6 > svg:hover {
  -webkit-transform: rotate(360deg);
  -ms-transform: rotate(360deg);
  transform: rotate(360deg);
}

.c9 {
  color: #FF6347;
  font-size: 1.2rem;
}

<section
  class="c0"
>
  <label
    class="c1 c2"
    for="TextField"
  >
    TextField
  </label>
  <div
    class="c3 c4"
  >
    <div
      class="c5 c6"
    >
      <svg
        aria-hidden="true"
        class="c7"
        data-testid="icon"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6zm-2 0l-8 5-8-5h16zm0 12H4V8l8 5 8-5v10z"
        />
      </svg>
    </div>
    <input
      class="c8"
      id="TextField"
      name="TextField"
      type="text"
      value=""
    />
  </div>
  <span
    class="c9"
  >
    email already registered
  </span>
</section>
`

exports[`<TextField /> should render with label 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1.6rem 0 0;
  border: 0.2rem solid;
  border-radius: 0.2rem;
  border-color: #EAEAEA;
  background: #EAEAEA;
}

.c1:focus-within {
  box-shadow: 0 0 0 0.5rem #F231A5;
}

.c2 {
  width: 100%;
  color: #030517;
  font-family: Poppins,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  font-size: 1.6rem;
  padding: 0.8rem 0;
  padding-left: 1.6rem;
  background-color: transparent;
  border: 0;
  outline: none;
}

.c2:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 2.4rem #EAEAEA inset;
  -webkit-filter: none;
  filter: none;
}

.c0 {
  font-size: 1.4rem;
  color: #030517;
  cursor: pointer;
}

<section
  class=""
>
  <label
    class="c0"
    for="email"
  >
    E-mail
  </label>
  <div
    class="c1"
  >
    <input
      class="c2"
      id="email"
      name="email"
      type="text"
      value=""
    />
  </div>
</section>
`
